[metadata]
name = $name
version = file: VERSION
description = $description
license = $license
long_description_content_type = text/markdown
long_description = file: README.md
keywords =
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
python_version >= "3.8"
include_package_data = True
package_dir=
    =src
packages=find:
scripts =
install_requires =
    orchd_sdk

[options.packages.find]
where=src

[options.package_data]
* = *.md

[options.extras_require]
rest = docutils>=0.3; pack ==1.1, ==1.3

[tool:pytest]
minversion = 6.0
addopts = -ra
testpaths =
    tests